# playing-with-LangGraph

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
src/: agent_with_memory_profile.prof  ai.py  main.py  run_with_profile_profile.txt
src/configs/: settings.py
src/module_1/: agent.py  agent_github_username.py  agent_with_memory.py  chains.py  router.py  simple_graphs.py
src/module_2/: external_memoery.py  filtering_and_trimming.py  state_multiple_schema.py  state_multiple_schema_input_output.py  state_reducers.py  state_reducers_custom.py  state_schema.py  state_schema_pydantic.py  the_5_chatbot_with_summery.py  trimming.py
src/module_3/: app.py  breakpoints.ipynb  dynamic_breakpoints.ipynb  edit_state_and_human_feedback.ipynb  stock.ipynb  stream.py  test.ipynb  time_travel.ipynb
