[project]
name = "learn-langgraph"
version = "0.1.0"
description = ""
authors = [
    { name = "Sanket Vaghela", email = "84759786+sanketvgh@users.noreply.github.com" },
]
readme = "README.md"
requires-python = "<4.0,>=3.9.0"
dependencies = ["langgraph (>=0.2.69,<0.3.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
