[project]
name = "learn-langgraph"
version = "0.1.0"
description = ""
authors = [
    { name = "Sanket Vaghela", email = "84759786+sanketvgh@users.noreply.github.com" },
]
readme = "README.md"
requires-python = "<4.0,>=3.9.0"
dependencies = ["langgraph (>=0.2.69,<0.3.0)", "pydantic-settings (>=2.7.1,<3.0.0)", "langchain-core (>=0.3.34,<0.4.0)", "langchain-mistralai (>=0.2.6,<0.3.0)", "langchain-ollama (>=0.2.3,<0.3.0)", "transformers (>=4.48.3,<5.0.0)", "psycopg[binary,pool] (>=3.2.4,<4.0.0)", "psycopg-pool (>=3.2.4,<4.0.0)", "langgraph-checkpoint-postgres (>=2.0.15,<3.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
